--- a/lib/tasks/volte/translations/en.yml
+++ b/lib/tasks/volte/translations/en.yml
@@ -1,4 +1,9 @@
 en:
+  timepicker:
+    dformat: "%H:%M"
+  date:
+    formats:
+      day_month_year: "%d/%m/%Y"
   pricing:
     unavailability:
       info: 'Add dates when item is not available.'
@@ -9,6 +14,10 @@ en:
     labels:
       transactable:
         name: 'Item Name'
+      reservations:
+        dates: 'Delivery date'
+      order:
+        transactable_pricing_id: 'Rental period'
   devise:
     registrations:
       signed_up: 'You have successfully registered. <a href="/dashboard/edit_profile">Click here</a> to complete your profile.'
