NM-6055 fix offer edition

--- a/lib/tasks/litvault/translations/en.yml
+++ b/lib/tasks/litvault/translations/en.yml
@@ -98,6 +98,7 @@ en:
       cancelled_by_host: "Cancelled by Referring Lawyer"
       confirmed: "Open"
       unconfirmed: "Pending"
+      inactive: "Draft"
 
   reservations_review:
     disabled_buttons:
