NM-5923 fix message

--- a/lib/tasks/litvault/translations/en.yml
+++ b/lib/tasks/litvault/translations/en.yml
@@ -71,6 +71,9 @@ en:
       upcoming: "Offers Open"
 
   flash_messages:
+    manage:
+      listings:
+        listing_cancelled: 'Your Case is now archived.'
     dashboard:
       add_your_company: "Please complete your Case first."
       locations:
